# oaxaca_morelos_2023

./: .gitignore  README.md  pyproject.toml
data/001_raw/: ERA5_Morelos_2023.nc
notebooks/: 001_exploracion.ipynb  002_funciones.ipynb  003_comprobacion_funciones.ipynb
notebooks/Tools/: funciones.py
