[project]
name = "era5"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "jupyter>=1.1.1",
    "matplotlib>=3.11.0",
    "netcdf4>=1.7.4",
    "notebook>=7.5.7",
    "pandas>=3.0.3",
    "plotly>=6.8.0",
    "xarray>=2026.4.0",
]
